--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 pandas 
-matplotlib.pyplot 
-plotly.express
+matplotlib
+plotly
 numpy
 dash
-dash_core_components
-dash_html_components
-dash.dependencies
 dash_bootstrap_components
